css/style.css
@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Work+Sans&display=swap');
/* Mobile */

* {
    margin: 0;
    padding: 0;
    border: 0;
}

html{
    --bg: #EAEAEA;
    --bg_footer: #111;
    --font: #000;
    --font_footer: #FFF;
}

html[data-theme='dark'] {
    --bg: #222;
    --font: #FFF;
    --bg_footer: #EAEAEA;
    --font_footer: #000;
}

body {
    background-color: var(--bg);
    color: var(--font);
    display: grid;
    height: 100vh;
}

header {
    margin-bottom: 10px;
}

#page-wrap {
    max-width: 1200px;
    margin: auto;
    padding: 2vh 3% 2vh 3%;
}

nav {
    height: 100px;
    max-width: 100%;
    display: grid;
    grid-row-gap: 5px;
    grid-template-rows: 50% 50%;
}

.top-bar {
    display: grid;
    grid-template-columns: 50px 5fr 50px;
    height: 100%;
    align-content: start;
    grid-column-gap: 15px;
}

.top-bar h1 {
    text-transform: uppercase;
    font-family: 'Crimson Text', serif;
    font-size: 42px;
    font-weight: 500;
    color: var(--font);
    margin-block-start: 0;
    margin-block-end: 0;
}

#site-logo {
    max-width: 100%;
    height: auto;
}

.toggle-container {
    justify-self: center;
    align-self: center;
}

.nav-bar {
    height: 100%;
    display: grid;
    align-items: center;
    grid-template-columns: 50px 100px 100px;
    grid-column-gap: 32px;
    width: 100%;
    list-style-type: none;
    padding-inline-start: 0;
    margin-inline: 0;
    margin-block: 0;
    font-size: 26px;
    margin-left: 5px;
}

.nav-bar a {
    font-family: 'Crimson Text', serif;
    font-weight: 500;
    cursor: pointer;
    text-decoration: none;
    color: var(--font);
    width: auto;
}

main {
    display: grid;
    justify-items: center;
}

.collection {
    display: grid;
    grid-template-columns: 1fr;
    justify-items: center;
    align-items: center;
    grid-row-gap: 25px;
    max-width: 100%;
}

.album {
    max-width: 100%;
    border-radius: 4px;
    box-shadow: rgba(0, 0, 0, 0.22) 0 3px 6px;
    transition: all .3s ease-in-out;
    position: relative;
}

.start_img {
    display: block;
    max-width: 100%;
    height: auto;
    border-radius: 4px;
}

footer{
    margin-top: 35px;
    height: auto;
    background: var(--bg_footer);
    padding: 20px 0 40px 0;
    align-self: end;
}

#footer-content-container {
    max-width: 100%;
    height: auto;
    display: grid;
    color: var(--font_footer);
    padding-left: 3%;
    grid-row-gap: 20px;
}

footer h2 {
    font-family: 'Crimson Text', serif;
    font-size: 30px;
    font-weight: 500;
}

#footer-social {
    display: grid;
    grid-template-columns: minmax(110px, 150px) minmax(120px, 150px) minmax(90px, 150px);
    grid-column-gap: 15px;
}

#footer-social a {
    font-family: 'Work Sans', sans-serif;
    text-decoration: none;
    color: var(--font_footer);;
    font-size: 22px;
    font-weight: 400;
}

input[type=checkbox] { /* styling for input element */
    height: 0;
    width: 0;
    visibility: hidden;
}

.toggle-container {
    display: grid;
    justify-self: start;
    justify-items: center;
}

label { /* styling for labels */
    cursor: pointer;
    text-indent: -9999px;
    width: 50px;
    height: 27px;
    background: #777;
    float: right;
    border-radius: 100px;
    position: relative;
}

label:after { /* styling for labels - on toggle */
    content: '';
    position: absolute;
    top: 3px;
    left: 3px;
    width: 20px;
    height: 20px;
    background: #fff;
    border-radius: 90px;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

input:checked + label { /* conditional check while toggling */
    background: #1ba80e;
}

input:checked + label:after {
    left: calc(100% - 5px);
    -webkit-transform: translateX(-100%);
    transform: translateX(-100%);
}

label:active:after {
    width: 45px;
}

@media screen and (min-width: 768px) and (max-width: 1024px) {
    #page-wrap {
        padding: 2vh 4% 2vh 4%;
    }

    .collection {
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
        grid-row-gap: 45px;
        grid-column-gap: 45px;
        max-width: 100%;
    }

    #footer-content-container {
        padding-left: 4%;
    }

}

@media screen and (min-width: 1025px) {
    #page-wrap {
        width: 70vw;
        max-width: 1200px;
        padding: 2vh 0 2vh 0;
    }

    .collection {
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
        grid-row-gap: 60px;
        grid-column-gap: 60px;
        max-width: 100%;
    }

    .album:hover {
        box-shadow: rgba(0, 0, 0, 0.30) 0 19px 43px;
        transform: translate3d(0px, -5px, 0px);
    }

    footer{
        display: grid;
        justify-items: center;
    }

    #footer-content-container {
        width: 70vw;
        max-width: 1200px;
        padding-left: 0;
    }

    footer h2 {
        font-size: 26px;
    }

    #footer-social a {
        font-size: 18px;
        transition: opacity 0.1s;
        opacity: 0.9;
    }

    #footer-social a:hover {
        opacity: 1;
    }
}

